<resources>
    <string name="app_name">仿百思不得姐</string>
    <string name="no_data_txt">啤酒饮料矿泉水，沙发板凳小马扎</string>
    <string name="cancle">取消</string>
    <string name="send_video">发视频</string>
    <string name="send_picture">发图片</string>
    <string name="send_text">发段子</string>
    <string name="send_voice">发声音</string>
    <string name="send_link">发链接</string>
    <string name="back">返回</string>
    <string name="content">正文内容</string>
    <string name="follow">关注</string>
    <string name="follow_text">快快登陆吧，关注百思最in牛人\n好友动态让你过吧瘾儿，噢耶！</string>
    <string name="login_text">登陆</string>
    <string name="register_text">注册</string>
    <string name="waning">注意</string>
    <string name="login_waning">此APP为个人练习版，请前往官网下载正版</string>
    <string name="trues">确定</string>
    <string name="my">我的</string>
    <string name="login_register">登陆/注册</string>
    <string name="shentie">审帖</string>
    <string name="shoucang">我的收藏</string>
    <string name="search">搜索</string>
    <string name="feed">意见反馈</string>
    <string name="myVideo">我的视频</string>
    <string name="tuijian_dingyur">推荐订阅</string>
    <string name="chuanyue">穿越</string>
    <string name="click_to_chuanyue">点击再次穿越</string>
    <string name="close">关闭</string>
    <string name="downloading">下载中</string>
    <string name="complete">已完成</string>
</resources>
