<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ckz.baisi.activity.SendNewActivity"
    android:background="@color/mostBackground">
    <ImageView
        android:id="@+id/icon_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_post_copyright"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="130dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/send_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/icon_post"
        android:text="@string/send_picture"
        android:visibility="invisible"
        android:drawableTop="@mipmap/send_picture"/>
    <TextView
        android:id="@+id/send_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:layout_below="@id/icon_post"
        android:layout_toLeftOf="@id/send_picture"
        android:layout_marginRight="50dp"
        android:text="@string/send_video"
        android:visibility="invisible"
        android:drawableTop="@mipmap/send_video"/>

    <TextView
        android:id="@+id/send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:layout_below="@id/icon_post"
        android:layout_toRightOf="@id/send_picture"
        android:layout_marginLeft="50dp"
        android:text="@string/send_text"
        android:visibility="invisible"
        android:drawableTop="@mipmap/send_text"/>


    <TextView
        android:id="@+id/send_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:layout_below="@id/send_video"
        android:layout_alignLeft="@id/send_video"
        android:layout_marginTop="30dp"
        android:text="@string/send_voice"
        android:visibility="invisible"
        android:drawableTop="@mipmap/send_voice"/>
    <TextView
        android:id="@+id/send_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:textSize="16sp"
        android:layout_below="@id/send_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/send_link"
        android:visibility="invisible"
        android:drawableTop="@mipmap/send_link"/>
    <Button
        android:id="@+id/send_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whilte"
        android:layout_alignParentBottom="true"
        android:text="@string/cancle"
        android:textSize="20sp"/>
</RelativeLayout>
