<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mostBackground">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="?android:attr/actionBarSize"
       android:background="@color/baisiColor">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/my"
          android:textColor="@color/white"
          android:textSize="@dimen/title_size"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:padding="10dp"
          android:src="@drawable/my_coins"/>
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_alignParentRight="true"
          android:padding="10dp"
          android:src="@drawable/myinfo_setting"/>

   </RelativeLayout>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:background="@color/white">
            <com.ckz.baisi.view.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/head_portrait"
                app:border_color="@color/white"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/user_icon"
                android:layout_margin="15dp"
                android:textSize="@dimen/login_register_size"
                android:text="@string/login_register"/>
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:background="@color/mostBackground"/>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white">
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/no_net_group"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                >
               <TextView
                   android:id="@+id/shentie_btn"
                   style="@style/myInfoStyle"
                   android:drawableTop="@mipmap/myinfo_icon_st_nor"
                   android:text="@string/shentie"
                  />
               <TextView
                   android:id="@+id/collect_btn"
                   style="@style/myInfoStyle"
                   android:drawableTop="@mipmap/myinfo_icon_collect_normal"
                   android:text="@string/shoucang"
                   />
               <TextView
                   android:id="@+id/search_btn"
                   style="@style/myInfoStyle"
                   android:drawableTop="@mipmap/myinfo_icon_search_nor"
                   android:text="@string/search"
                   />
               <TextView
                   android:id="@+id/feed_btn"
                   style="@style/myInfoStyle"
                   android:drawableTop="@mipmap/myinfo_icon_yhfk_nor"
                   android:text="@string/feed"
                   />
               <TextView
                   android:id="@+id/my_video_btn"
                   style="@style/myInfoStyle"
                   android:drawableTop="@mipmap/down_video"
                   android:text="@string/myVideo"
                   />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_pager"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">
            </LinearLayout>
         </RelativeLayout>

         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:background="@color/mostBackground"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:background="@color/white"
             android:textSize="@dimen/list_textSize"
             android:textColor="@color/mostTextColor"
             android:text="@string/tuijian_dingyur"/>
         <com.ckz.baisi.view.MyListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:id="@+id/tuijian_list"
             />
      </LinearLayout>
   </ScrollView>
</LinearLayout>