<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/baisiColor">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/follow_btn_press"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/follow"
            android:textSize="@dimen/title_size"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mostTextColor"
            android:text="@string/follow_text"
            android:textSize="@dimen/follow_txt_size"
            android:layout_marginBottom="60dp"
            android:lineSpacingExtra="10dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/follow_prompt_login_icon"
            />
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_text"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/follow_btn_txt_size"
                android:background="@drawable/follow_login_btn_bg"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/baisiColor"
                android:textSize="@dimen/follow_btn_txt_size"
                android:text="@string/register_text"
                android:gravity="center"
                android:background="@drawable/follow_register_btn_bg"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>